[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contui"
version = "0.1.0"
description = "A python TUI library focused around size, speed, and independance"
readme = "README.md"
license = "MIT"
authors = [
    { name="Tired Fox", email="zboehm104@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]
dev = [
  "black",
  "ruff",
  "requests"
]

[project.urls]
"Homepage" = "https://github.com/Tired-Fox/contui"
"Website" = "https://tired-fox.github.io/contui/"

[project.scripts]

[tool.ruff]
ignore = [
  "ANN101"
]
extend-select = [
    'E',
    'F',
    'W',
    "C90",
    "I",
    "N",
    "UP",
    "ANN",
    "S",
    "A",
    "B",
    "COM",
    "C4",
    "Q",
    "RET",
    "SIM",
    "TCH",
    "PTH",
    "PLE",
    "RUF"
]
